force-app/main/default/objects/Qr_code__c/Qr_code__c.object-meta.xml
<CustomObject>
    <label>QR Code</label>
    <nameField>
        <displayFormat>{MM}-{YYYY}-{0}</displayFormat>
        <label>QR Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>