force-app/main/default/objects/Qr_code__c/fields/Driver_app_QR_code__c.field-meta.xml
<CustomField>
    <fullName>Driver_app_QR_code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>QR code scanned by the driver app</description>
    <label>Driver app QR code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>