force-app/main/default/objects/Qr_code__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>filled by a process builder to get product from orderItem</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QR Codes</relationshipLabel>
    <relationshipName>QR_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>