force-app/main/default/objects/Qr_code__c/fields/QR_Code_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code Case Safe ID</label>
    <type>Text</type>
</CustomField>