force-app/main/default/objects/Qr_code__c/fields/QR_code_Ref__c.field-meta.xml
<CustomField>
    <fullName>QR_code_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track order QR code came from</description>
    <label>QR Codes Ref</label>
    <referenceTo>QR_Codes_from_Detrack__c</referenceTo>
    <relationshipLabel>Qr codes</relationshipLabel>
    <relationshipName>Qr_codes</relationshipName>
    <type>Lookup</type>
</CustomField>